# mechmind-dwv

./: "🐍 Setup Python"  "💌 Notify Us"  "📊 Analyze (With Love)"  "🔍 Build MechBot (Special Mode)"  "🔍 Build MechBot 1(Special Mode)"  "🚀 Initialize CodeQL (Custom Queries)"  .bandit.yml  .coverage  .env  .gitignore  .gitmodules  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  STRUCTURE.md  actual_structure.txt  available_topics.md  bandit_results.json  codecov.SHA256SUM  coverage.xml  dependabot_verification  dependabot_verification.rs  deploy_status.sh  env.production  gitignore  mechmind-stats-integration.sh  npm-audit.json  package-lock.json  package.json  portafolio.html  requirements.txt  safety_report.json  setup_ai_core.sh  setup_ai_core.sh.txt  🤖 checkout.yml  (+1 more)
. script/docs/: verify_links.py
.ai-venv/: pyvenv.cfg
.github/: -readme-stats@latest  STRUCTURE.txt  actions-ecosystem.yml  codeql -analysis.yml  codeql-custom.qls  codeql_codeql_config.yml  dependabot.yaml  dependabot.yml  package-ecosystem
.github/ISSUE_TEMPLATE/: bug_report.md  (+1 more)
anuraghazra/: .github-readme-stats@latest  Tech Radar  Tips.Pro.md  github-readme-stats  github-readme-stats.md  github-readme-stats@latest
available/: topics.md
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  STRUCTURE.md  doc-acces.md  fast-acces.md  index.html  index.md
github/: STRUCTURE.md
projects/: proyecto_rust.txt
projects/ros2/: CMakeLists.txt  package.xml
projects/rust/mechbot-2x/: Cargo.toml
projects/rust/mechbot-2x/deploy/: dockerfile
robotics/: DATASHEET.md
scripts/: datos-científicos.rs  deploy-interstellar.sh  min.codear.py  ☕ **Café** > `;`
site/: 404.html  index.html
src/: __init__.py
tests/: test_core.py  test_sample.py
🦀 **Rust**/: README.md.  rust
(+199 files in other folders)
