<?xml version="1.0"?>
<package format="2">
  <name>mechbot_ros2</name>
  <version>0.1.0</version>
  <description>MechMind ROS2 Integration</description>
  <maintainer email="mechmind@dwv">MechMind</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
</package>
